Updated login and converted to use wallet addresses

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -64,6 +64,10 @@ input {
   }
 }
 
+.button.logout {
+  background-color: rgb(68, 49, 151);
+}
+
 .wallet {
   display: flex;
   flex-direction: column;
